[package]
name = "iot-data-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chrono = "0.4.33"
dotenv = { workspace = true }
tokio = { workspace = true, features = ["full", "tracing"] }
sqlx = { workspace = true, features = ["sqlite", "chrono", "macros", "runtime-tokio-native-tls"]}
iot-db-accessor = { path = "../iot-db-accessor" }