[package]
name = "iot-db-accessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dotenv = { workspace = true }

chrono = { version = "0.4.33", features = ["serde"] }
sqlx = { workspace = true, features = [
    "sqlite",
    "chrono",
    "macros",
    "runtime-tokio-native-tls"
]}
clap = { version = "4.4.18", features = ["derive"] }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"

[build-dependencies]
dotenv = { workspace = true }
