[package]
name = "iot-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true}
axum = { version = "0.7.4", features = ["query"] }
sqlx = { workspace = true, features = ["sqlite", "chrono", "macros", "runtime-tokio-native-tls"]}
#rusqlite = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.195", features = ["derive"] }
dotenv = { workspace = true }
axum-macros = "0.4.1"
tower-http = { version = "0.5.0", features = ["fs"] } # , "trace"
iot-db-accessor = { path = "../iot-db-accessor" }
