[package]
name = "iot-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true}
tracing = { workspace = true }
tracing-subscriber = { workspace = true,  features = ["env-filter"] }
axum = { version = "0.7.4", features = ["query"] }
sqlx = { workspace = true, features = ["sqlite", "chrono", "macros", "runtime-tokio-native-tls"]}
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
serde = { version = "1.0.195", features = ["derive"] }
dotenvy = { workspace = true }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] } # , "trace"
iot-db-accessor = { path = "../iot-db-accessor" }
