[package]
name = "sensor-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
dotenvy = { workspace = true }
anyhow = { workspace = true }
#SMPRIO iot-db-accessor = { path = "../iot-db-accessor" }
